One more add opens that is apparently only needed on linux jdk 11